--- a/index.htm
+++ b/index.htm
@@ -79,7 +79,7 @@
                     <p><b style="color: brown; text-shadow: 1px 2px 12px red;">CAUTION:</b> This game contains High end graphics and sounds. If you Mobile / Computer / Laptop / TV / Console / VR gets too hot while playing it, Immediately turn your specified device off for atleast an hour, as it can cause permanent damage to low end computer (Like the ones having Intel's 1st Generation processor). If you have a control system, or application, There is not issue in playing the game! It will run totally fine on Macs and Iphones as they have inbuilt temperature and prirority control software...</p>
                     <p>I am really sorry. I did'nt have time to make a cool game, but still, I scripted RYANAIR, A plane and some cars (only few of them, others were old models from toolbox). I did try to make it look cool, Hope you like it :D. If you don't, You can also click on any other buttons of your choice. THIS WEBSITE WAS MADE BY ME! Just for you my dear friend</p>
                     <p><b style="color: brown; text-shadow: 1px 2px 12px red;"><i>Wishing you lots of joy, laughter and unforgettable moments as you celebrate another birthday!</i></b></p>
-                    <button>[UPDATE] Chills City : Roblox</button>
+                    <button onclick="window.open('https://www.roblox.com/games/chills-city', '_blank')">[UPDATE] Chills City : Roblox</button>  
                 </div>
             </div>  
         </div>  
